2011-08-30 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/tancotf.c,
	  device/lib/acosf.c,
	  device/lib/sinf.c,
	  device/lib/asincosf.c,
	  device/lib/_fsadd.c,
	  device/lib/asinf.c,
	  device/lib/printf_large.c,
	  device/lib/_divulong.c,
	  device/lib/_atof.c,
	  device/lib/cotf.c,
	  device/lib/expf.c,
	  device/lib/sincosf.c,
	  device/lib/tanf.c,
	  device/lib/sincoshf.c,
	  device/lib/cosf.c:
	  Use BOOL or _Bool.

2011-08-30 Borut Razem <borut.razem AT gmail.com>

	* support/cpp/libcpp/lex.c:
	  reverted to revision r6084 (before sdcpp 4.6.1 synchronization),
	  partialy re-synchronized with sdcpp 4.6.1
	* support/cpp/libcpp/macro.c: fixed naked hash handling
	* support/regression/test/bitfields.c:
	  fixed a regtest failure on i386 and x86_64 host archirectures with
	  gcc 4.6 by turning off the -O2 optimization

2011-08-29 Borut Razem <borut.razem AT gmail.com>

	* support/cpp/libiberty/getpwd.c: reverted; it was committed by mistake
	* support/cpp/libcpp/lex.c: disable fast scanner using SSE due to
	  bug #3400132: fatal error: ../gcc/config/i386/cpuid.h

2011-08-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/ds390/Makefile.in: added gptr_cmp.rel

2011-08-26 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* device/include/stdbool.h,
	  support/regression/tests/bool.c:
	  Fixed bug #2939485.

2011-08-28 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/ds390/gptr_cmp.c: new, added
	* src/ds390/gen.c (loadDptrFromOperand): factored out,
	  (genFarPointerGet, genCodePointerGet, genGenPointerGet, genFarPointerSet,
	   genGenPointerSet): use loadDptrFromOperand
	  (genCmp, gencjneshort): fixed generic pointer comparison
	* support/regression/tests/genptrs.c: expanded and enabled tests for ds390

2011-08-28 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCicode.c:
	  applied patch #3285611: Workaround gcc 4.6.0 bug with sdcc 3.0.0,
	  thanks Roy Rankin